landing page ui;

--- a/app/globals.css
+++ b/app/globals.css
@@ -116,7 +116,23 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@layer utilities {
+  .gradient-title {
+    @apply font-extrabold bg-gradient-to-br from-orange-500 via-orange-300 to-orange-400 bg-clip-text tracking-tighter text-transparent pr-2 pb-2;
+  }
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+.cl-avatarBox {
+  width: 40px;
+  height: 40px;
 }
