--- a/app/globals.css
+++ b/app/globals.css
@@ -136,3 +136,22 @@ html{
   width: 40px;
   height: 40px;
 }
+
+.ql-container {
+  min-height: 80vh;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.ql-editor{
+  height:100%;
+  width:100%;
+  flex:1;
+  overflow-y: auto;
+}
+
+.ql-toolbar {
+  border-radius: 5px;
+}
